# ESC_toolkit

./: CMakeLists.txt
CORE/APIs/: interface_six_step.hpp  interfaces.hpp
CORE/APIs/API_BLDC/: interfaces_sensor.hpp
CORE/PAL/Drivers/GPIO/: IGpio.hpp
Docs/: GNU_arm_embedded_toolchain.md  OpenOCD.md  cpp_compile_flags.md  cpp_compile_tag.md  flash_the_stm.md  nuttx.md  setup.md  setup_Linux.md  setup_Win.md
Docs/How to build and flash/: compile_with_gcc.md  cpp_compile_flags.md  debug_with_gnu.md  linker_scripts.md
Tests/: a.out
cmake/: toolchain-arm-none-eabi.cmake
